--- a/html/details.html
+++ b/html/details.html
@@ -656,8 +656,7 @@
         },
         beforeMount: function () {
             vant.Toast.loading({
-                message: '加载中...',
-                forbidClick: true,
+                message: '加载中...'
             });
         },
         mounted: function () {
