--- a/html/groud.html
+++ b/html/groud.html
@@ -271,35 +271,28 @@
                     };
                     // 声明一个函数用于获取距离最大的几个中心点，这里是3个中心点
                     const getCenter = function (data) {
-                        // // 在所有数据中随机选择三个中心点
-                        // let firstIndex = parseInt(Math.random() * data.length);
-                        // centers.push(data[firstIndex]);
-                        // centerIndexs.push(firstIndex);
-
-                        // let secondIndex = parseInt(Math.random() * data.length);
-                        // if (secondIndex === firstIndex) {
-                        //     secondIndex = parseInt(Math.random() * data.length);
-                        // }
-                        // centers.push(data[secondIndex]);
-                        // centerIndexs.push(secondIndex);
-
-                        // let thirdIndex = parseInt(Math.random() * data.length);
-                        // if (thirdIndex === firstIndex || thirdIndex === secondIndex) {
-                        //     thirdIndex = parseInt(Math.random() * data.length);
-                        // }
-                        // centers.push(data[thirdIndex]);
-                        // centerIndexs.push(thirdIndex);
-                        // 在所有数据中随机选择出k个聚类中心点
-                        for (let i = 0; i < k; i++) {
-                            index = parseInt(Math.random() * data.length);
-                            if (centerIndexs.indexOf(index) === -1) {
-                                centers.push(data[index]);
-                                centerIndexs.push(index);
+                        // 随机出第一个聚类中心
+                        let firstIndex = parseInt(Math.random() * data.length);
+                        centers.push(data[firstIndex]);
+                        centerIndexs.push(firstIndex);
+                        // 第二个聚类中心是距离第一个中心最远的点
+                        let dis = 0, index = -1;
+                        for (let j = 0; j < data.length; j++) {
+                            if (centerIndexs.indexOf(j) === -1) {
+                                let tempDis = getDistance(data[j], data[centerIndexs[0]]);
+                                if (tempDis > dis) {
+                                    dis = tempDis;
+                                    index = j;
+                                }
                             }
-                            else {
-                                index = parseInt(Math.random() * data.length);
-                                centers.push(data[index]);
-                                centerIndexs.push(index);
+                        }
+                        centerIndexs.push(index);
+                        centers.push(data[index]);
+                        if (k >= 3) {
+                            for (let i = 2; i < k; i++) {
+                                let newIndex = parseInt(Math.random() * data.length);
+                                centers.push(data[newIndex]);
+                                centerIndexs.push(newIndex);
                             }
                         }
                     }
@@ -352,7 +345,7 @@
                     console.log(centerIndexs, centers);
                     console.log(typeArray);
                     // 最多迭代10次，来更新中心点
-                    for (let i = 0; i < 10; i++) {
+                    for (let i = 0; i < n; i++) {
                         for (let i = 0; i < typeArray.length; i++) {
                             updataCenter(typeArray[i]);
                         }
@@ -373,7 +366,7 @@
                         }
                     }
                     console.log(recommendList);
-                    // 选择评分前十的商品进行推荐
+                    // 选择评分前五的商品进行推荐
                     for (let i = 0; i < typeArray.length; i++) {
                         for (let j = 0; j < 5; j++) {
                             recommendList.push(typeArray[i][j]);
