--- a/html/test0.html
+++ b/html/test0.html
@@ -5,27 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>实验测试聚类后排序</title>
-    <!-- 引入Vue文件 -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6/dist/vue.min.js"></script>
-    <!-- 引入axios的JS文件 -->
-    <script src="../js/axios.min.js"></script>
+    <title>实验测试聚类后排序耗时和直接排序耗时</title>
 </head>
 
 <body>
-
+    <h1>实验测试聚类后排序耗时和直接排序耗时</h1>
 </body>
 <script>
     // 先生成所需数据，来模拟推荐系统
     let data = [];
-    axios.get("../js/testdata.json").then(res => {
-        data = res.data.data;
-    })
     for (let i = 0; i < 5000; i++) {
         let prize = parseInt(Math.random() * 200);
         let want = parseInt(Math.random() * 1000);
         let browse = parseInt(Math.random() * 1000);
-        let grade = parseInt(Math.random() * 10);
+        let grade = parseInt(Math.random() * 10) + 1;
         let newObj = {
             index: i,
             prize,
@@ -146,7 +139,7 @@
             }
         }
     }
-    console.time("sort");
+    console.time("聚类后排序");
     let p0 = new Promise((resolve, reject) => {
         sortArray(typeArray,0);
         sortArray(typeArray,1);
@@ -167,7 +160,18 @@
             }
         }
     });
-    console.timeEnd("sort");
+    console.timeEnd("聚类后排序");
+    console.time("直接排序");
+        for (let i = 0; i < data.length; i++) {
+            for (let j = 0; j < data.length - 1 - i; j++) {
+                if (data[j].grade < data[j + 1].grade) {
+                    let tempRate = data[j].grade;
+                    data[j].grade = data[j + 1].grade;
+                    data[j + 1].grade = tempRate;
+                }
+            }
+        }
+    console.timeEnd("直接排序");
     console.log(centerIndexs, centers);
     console.log(typeArray);
 
